# Line-Heating

./: .dockerignore  .gitignore  CROSS-PLATFORM-SUMMARY.md  Dockerfile  FILE-STRUCTURE.md  QUICK-REFERENCE.md  README.md  REORGANIZATION-SUMMARY.md  SETUP.md  demo_centerline_heating.py  docker-compose.yml  requirements.txt  run_centerline_900C.json  run_centerline_900C_v3.json  run_config.example.json  setup.bat  setup.sh
IGESFiles/: keel plate 0-5.igs
config/: README.md  config_forward_example.json  config_inverse_example.json  fe_run_v10.json  fe_run_v12.json  fe_run_v15.json  fe_run_v8.json  keel_plate_enhanced.json  keel_plate_heat_lines.json  keel_plate_heating_optimized.json  keel_plate_heating_plan.json  keel_plate_inverse.json  keel_plate_li2023_scaled.json  keel_plate_opt_loop_final.json  keel_plate_practical.json  plan_example.json  plan_forward_example.json  plan_forward_x200_rotated.json  plan_forward_y150.json
docs/: FINAL.md  PROGRESS.md  README.md  REORGANIZATION-SUMMARY.md  UPDATE_SUMMARY.md  inherent_strain_models.tex  keel_plate_report.tex  li2023_full_report.tex  plan_demo_process.tex
framework/: README.md
publication/: README.md  main.tex  references.bib
publication2/: ELASTOPLASTIC_INHERENT_STRAIN_COMPARISON.md  PUBLICATION_REVIEW_AND_DATA_PRESENTATION.md  README.md  main.tex  references.bib
results/: li2023_case_001.json  li2023_case_001_v2_rebalance.json  li2023_case_001_v3_pass_energy.json  (+39 more)
thermo_fem/cpp/: CMakeLists.txt
thermo_fem/cpp/include/: heat.hpp  mechanics.hpp
thermo_fem/cpp/src/: bindings.cpp  heat.cpp  mechanics.cpp
(+112 files in other folders)
